# drt-rs-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  benchmarks.sh  build-wasm.sh  clean-wasm.sh  denali-fmt.sh  docker-compose.yml  meta-run-all.sh  publish.sh  rust-toolchain.toml  tool-update.sh  vm-test-build-copy.sh
chain/core/: Cargo.toml  README.md
chain/core/src/: lib.rs
chain/core/src/std/: bech32_address.rs
chain/vm/: Cargo.toml
chain/vm/src/: crypto_functions_bls.rs  lib.rs  system_sc.rs  types.rs  vm_err_msg.rs  world_mock.rs
chain/vm/src/blockchain/: state.rs
chain/vm/src/builtin_functions/: builtin_func_container.rs  builtin_func_trait.rs
chain/vm/src/executor_impl/: we_executor.rs  we_executor_disabled.rs
chain/vm/tests/: gas_schedule_test.rs  test_crypto.rs
chain/wasmer-prod/: Cargo.toml
chain/wasmer-prod/src/: wasmer_prod.rs
contracts/benchmarks/large-storage/: Cargo.toml
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/core/price-aggregator/: Cargo.toml
contracts/core/wmoa-swap/: Cargo.toml  sc-config.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/crowdfunding/: Cargo.toml
contracts/examples/dcdt-transfer-with-fee/: Cargo.toml  README.md
contracts/modules/: Cargo.toml  README.md
contracts/modules/src/: dcdt.rs  default_issue_callbacks.rs  dns.rs  lib.rs  staking.rs  subscription.rs  transfer_role_proxy.rs
data/codec/: Cargo.toml
data/codec/src/: lib.rs
data/codec/tests/: derive_bitflags_struct.rs  derive_tuple_struct_test.rs  explicit_impl_enum.rs  explicit_impl_struct.rs  explicit_impl_struct_opt_field.rs  explicit_impl_wrapped_array.rs
data/human-readable/: Cargo.toml
data/human-readable/src/: decode.rs  defaults.rs  encode.rs  lib.rs  schema.rs
data/human-readable/tests/: enum_test.rs  integrated_test.rs  single_value_tests.rs  struct_test.rs
framework/base/: Cargo.toml
framework/base/src/: abi.rs  err_msg.rs  external_view_contract.rs  imports.rs  lib.rs  macros.rs
framework/base/tests/: formatter_test.rs
framework/derive/: Cargo.toml
framework/derive/src/: lib.rs  managed_vec_item_derive.rs  type_abi_derive.rs
framework/meta/: Cargo.toml
framework/meta-lib/: Cargo.toml
framework/meta-lib/src/: abi_json.rs  lib.rs  print_util.rs  version.rs  version_history.rs
framework/meta-lib/tests/: abi_json_decode_test.rs  ei_test.rs  multi_contract_test.rs
framework/meta/src/: lib.rs
framework/meta/tests/: stg_process_code_test.rs  template_test.rs  wallet_encrypt_keystore_test.rs
framework/scenario/: Cargo.toml
framework/scenario/src/: display_util.rs  imports.rs  lib.rs  managed_test_util.rs  scenario_macros.rs  vm_go_tool.rs  whitebox_legacy.rs
framework/scenario/tests/: contract_without_macros.rs  dcdt_token_payment_test.rs  derive_managed_vec_item_biguint_test.rs  derive_managed_vec_item_dcdt_token_payment_test.rs  derive_managed_vec_item_decimal_test.rs  derive_managed_vec_item_enum_1.rs  derive_managed_vec_item_enum_2_managed.rs  derive_managed_vec_item_enum_simple.rs  derive_managed_vec_item_struct_1_test.rs  derive_managed_vec_item_struct_2_test.rs  derive_managed_vec_item_struct_3.rs  hex_call_data_arg_load.rs  managed_codec_test.rs  managed_decimal_test.rs  managed_map_unit_tests.rs  managed_option_test.rs  managed_ref_test.rs  managed_type_debug_test.rs  multi_transfer_with_moa.rs  multi_transfer_with_rewa.rs  path_test.rs  scenarios_io_test.rs  scenarios_self_test.rs  single_tx_api_test.rs  test_hash_bi_di_mapper.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_hash_unordered_set_mapper.rs  test_linked_list_mapper.rs  test_queue_mapper.rs  test_vec_mapper.rs  token_id_legacy_test.rs  token_id_test.rs  token_identifier_test.rs  token_properties_result_test.rs  tx_call_normalize.rs
framework/wasm-adapter/: Cargo.toml
framework/wasm-adapter/src/: lib.rs  panic.rs  wasm_macros.rs
numbat-wasm/: Cargo.toml
numbat-wasm-debug/: Cargo.toml
numbat-wasm-debug/src/: big_int_mock.rs  big_uint_mock.rs  ext_mock.rs  lib.rs  test_util.rs
numbat-wasm-debug/src/api/: send_api_mock.rs
numbat-wasm-debug/src/meta/: meta_config.rs  meta_main.rs
numbat-wasm-debug/src/testing_framework/: contract_obj_wrapper.rs  mod.rs  raw_converter.rs
numbat-wasm-debug/src/tx_execution/: exec_call.rs
numbat-wasm-debug/src/tx_mock/: tx_async_call_data.rs  tx_context.rs  tx_input.rs
numbat-wasm-debug/src/world_mock/: blockchain_mock.rs  blockchain_mock_init.rs  contract_container.rs  dcdt_data.rs
numbat-wasm-debug/tests/: sample_adder.rs
numbat-wasm-modules/: Cargo.toml
numbat-wasm-modules/src/governance/: mod.rs
numbat-wasm-node/: Cargo.toml
numbat-wasm-node/src/: big_int.rs  big_uint.rs  ext.rs  lib.rs
numbat-wasm-node/src/api/: send_api_node.rs
numbat-wasm/src/: address.rs  lib.rs
numbat-wasm/src/api/: builtin_function_names.rs  send_api.rs
numbat-wasm/src/call_data/: cd_de.rs  cd_ser.rs
numbat-wasm/src/dcdt/: system_sc_proxy.rs
sdk/http/: Cargo.toml
sdk/http/examples/: account.rs  account_storage.rs  get_dcdt_tokens.rs  get_hyper_block_by_hash.rs  get_hyper_block_by_nonce.rs  get_hyper_block_latest.rs  get_network_config.rs  get_network_economics.rs  sign_tx.rs  sign_txs.rs  tx_cost.rs  tx_default_args.rs  tx_info.rs  vm_query.rs
sdk/http/src/: gateway_http_proxy.rs
sdk/http/tests/: get_network_config_test.rs
sdk/scenario-format/: Cargo.toml  README.md
sdk/scenario-format/tests/: interpreter_test.rs  reconstructor_tests.rs
tools/drtpy-snippet-generator/: Cargo.toml
tools/drtpy-snippet-generator/src/: cmd_builder.rs  constants.rs  drtpy_snippet_generator.rs
tools/gas-schedule-generator/: Cargo.toml
tools/gas-schedule-generator/src/: generate.rs
tools/gas-schedule-generator/tests/: generation_test.rs  valid_generated.txt
tools/op-test-gen/: Cargo.toml
tools/op-test-gen/src/: op_gen_lib.rs  op_gen_scenario.rs
tools/wat-gen/: Cargo.toml
tools/wat-gen/src/: wat_gen_main.rs  wat_gen_single_import.rs
(+1755 files in other folders)
