[package]
name = "numbat-wasm-debug"
version = "0.0.1"
edition = "2018"

authors = ["Numbat<contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Numbat WebAssembly smart contract API debugging mocks and utils"
keywords = ["numbat", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
numbat-wasm = "0.0.1"
# numbat-wasm = { path = "../numbat-wasm" } #use during development
num-bigint = "0.2.3"
num-traits = "0.2"
hex = "0.4.0"
sha3 = "0.8.2"
