[package]
name = "numbat-wasm-modules"
version = "0.0.18"
edition = "2018"

authors = ["Dharitri <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat WebAssembly standard smart contract modules"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[features]
alloc = ["numbat-wasm/alloc"]

[dependencies.numbat-wasm]
version = "0.0.18"
path = "../numbat-wasm"
