[package]
name = "numbat-wasm-node"
version = "0.0.1"
edition = "2018"

authors = ["Numbat<contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Numbat WebAssembly VM API wrapper"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools::ffi"]

[dependencies]
numbat-wasm = "0.0.1"
# numbat-wasm = { path = "../numbat-wasm" } #use during development
wee_alloc = "0.4"
