[package]
name = "numbat-wasm-node"
version = "0.0.18"
edition = "2018"

authors = ["Dharitri <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat WebAssembly VM API wrapper"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools::ffi"]

[features]
vm-validate-token-identifier = []
vm-dcdt-local-roles = []
ei-unmanaged-node = []

[dependencies.numbat-wasm]
version = "=0.0.18"
path = "../numbat-wasm"
