[package]
name = "numbat-wasm"
version = "0.0.1"
edition = "2018"

authors = ["Numbat<contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Numbat WebAssembly smart contract API"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[dependencies]
wee_alloc = "0.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
