[package]
name = "dharitri-chain-core"
version = "2.0.0"
edition = "2024"

authors = [
    "Dharitri <contact@dharitri.org>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI chain interfaces, constants, and base types"
keywords = ["dharitri", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[features]
std = ["bech32", "serde", "hex"]

[dependencies]
bitflags = "2.9"
bech32 = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
hex = { version = "0.4", optional = true }

[dependencies.dharitri-sc-codec]
version = "=0.24.0"
path = "../../data/codec"
features = ["derive"]
