[package]
name = "dharitri-chain-vm-wasmer-prod"
version = "0.0.0"
edition = "2021"
publish = false

description = "Dharitri VM adapter for the Wasmer Production executor"

[lib]
path = "src/wasmer_prod.rs"

[dependencies.dharitri-chain-core]
version = "=1.19.0"
path = "../core"


[dependencies.dharitri-chain-vm]
version = "=1.19.0"
path = "../vm"

[dependencies.dharitri-vm-executor]
version = "1.0.5"


[dependencies.dharitri-vm-executor-wasmer]
version = "1.0.5"
default-features = false
features = ["dharitri-vm-executor-published"]
git = "https://github.com/TerraDharitri/drt-rs-vm-executor"
rev = "29e9f6605f27cd0b4cc597bc8ab3375d593bf989"

[workspace]
members = ["."]