[package]
name = "dharitri-sc-modules"
version = "2.0.0"
edition = "2024"

authors = ["DharitrI <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI WebAssembly standard smart contract modules"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[features]
alloc = ["dharitri-sc/alloc"]

[dependencies.dharitri-sc]
version = "2.0.0"
path = "../../framework/base"
