[package]
name = "dharitri-sc-codec"
version = "0.24.0"
edition = "2024"

authors = [
    "Dharitri <contact@dharitri.org>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Lightweight binary serializer/deserializer, written especially for DharitrI smart contracts"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools",
]

[features]
derive = ["dharitri-sc-codec-derive"]

[dependencies.dharitri-sc-codec-derive]
path = "../codec-derive"
version = "=0.24.0"
optional = true

[dependencies]
arrayvec = { version = "=0.7.6", default-features = false }
num-bigint = { version = "0.4", optional = true }           # can only be used in std contexts
unwrap-infallible = "1.0"
bitflags = "2.9"

[dev-dependencies.dharitri-sc-codec-derive]
path = "../codec-derive"
version = "=0.24.0"
