[package]
name = "dharitri-sc-codec-human-readable"
version = "2.0.0"
edition = "2024"
publish = false

authors = ["DharitrI <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Conversions from a human readable format to the dharitri-sc-codec"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
serde_json = { version = "1.0.68" }

[dependencies.dharitri-sc-scenario]
version = "=2.0.0"
path = "../../framework/scenario"
