[package]
name = "dharitri-sc"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"

authors = ["Dharitri <contact@dharitri.org>", "DharitrI <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI smart contract API"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[features]
num-bigint = ["dharitri-sc-codec/num-bigint"]
alloc = []
std = ["dharitri-chain-core/std"]
managed-buffer-builder-cached = []
dcdt-token-payment-legacy-decode = []
contract-call-legacy = []

[dependencies]
hex-literal = "1.0"
bitflags = "2.9"
num-traits = { version = "=0.2.19", default-features = false }
unwrap-infallible = "1.0"
generic-array = "1.2.0"

[dependencies.dharitri-sc-derive]
version = "=2.0.0"
path = "../derive"

[dependencies.dharitri-sc-codec]
version = "=0.24.0"
path = "../../data/codec"
features = ["derive"]

[dependencies.dharitri-chain-core]
version = "=2.0.0"
path = "../../chain/core"
