[package]
name = "dharitri-sc-derive"
version = "2.0.0"
edition = "2024"

authors = ["Dharitri <contact@dharitri.org>", "DharitrI <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI smart contract API procedural macros"
keywords = ["dharitri", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
hex = "0.4"
radix_trie = "0.3"

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[lib]
name = "dharitri_sc_derive"
proc-macro = true
