[package]
name = "dharitri-sc-meta-lib"
version = "2.0.0"
edition = "2024"

authors = [
    "Dharitri <contact@dharitri.org>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI smart contract meta-programming tools and build system"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc_version = "0.4"
toml = { version = "0.9", features = ["preserve_order"] }
colored = "3.0"
lazy_static = "1.4.0"
convert_case = "0.10"
hex = "0.4"
wasmparser = "0.243"
wasmprinter = "0.243"
semver = "1.0.20"
wat = "1.217.0"

[dependencies.dharitri-sc]
version = "=2.0.0"
path = "../base"
features = ["alloc", "num-bigint"]
