[package]
name = "dharitri-sc-meta"
version = "2.0.0"
edition = "2024"

authors = [
    "Dharitri <contact@dharitri.org>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI smart contract crate management standalone tool"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[[bin]]
name = "sc-meta"
path = "src/main.rs"

[features]
template-test-current = []
template-test-released = []

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
tokio = { version = "1.24", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.9", features = ["preserve_order"] }
colored = "3.0"
convert_case = "0.10"
semver = "1.0.20"
ruplacer = { version = "0.10", default-features = false }
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = { version = "6.0", features = ["deflate"], default-features = false }
copy_dir = "0.1.2"
pathdiff = "0.2.1"
common-path = "1.0.0"
bip39 = { version = "2.0.0", features = ["rand"] }
anyhow = "1.0"
hex = "0.4.3"

[dependencies.dharitri-sc-meta-lib]
version = "=2.0.0"
path = "../meta-lib"

[dependencies.dharitri-sc]
version = "=2.0.0"
path = "../base"
features = ["alloc", "num-bigint"]

[dependencies.dharitri-sc-snippets]
version = "=2.0.0"
path = "../snippets"

[dependencies.dharitri-sdk]
version = "=2.0.0"
path = "../../sdk/core"
features = ["wallet-full"]
