[package]
name = "dharitri-sc-scenario"
version = "0.55.0"
edition = "2021"

authors = [
   
    "Dharitri <contact@dharitri.org>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Dharitri tools for writing and executing scenarios"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
base64 = "0.22"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
bech32 = "0.11"
log = "0.4.17"
sha2 = "0.10.6"
serde = "1.0"
serde_json = "1.0"
pathdiff = "0.2.1"
itertools = "0.14.0"
colored = "2.2"
unwrap-infallible = "0.1.5"

[features]
default = ["wasm-incompatible"]
wasm-incompatible = ["dharitri-vm/wasm-incompatible"]
run-go-tests = []

[dependencies.dharitri-sc]
version = "=0.55.0"
features = ["alloc", "num-bigint"]
path = "../base"

[dependencies.dharitri-sc-meta-lib]
version = "=0.55.0"
path = "../meta-lib"

[dependencies.dharitri-scenario-format]
version = "0.23.0"
path = "../../sdk/scenario-format"

[dependencies.dharitri-vm-executor]
version = "0.0.2"

[dependencies.dharitri-vm]
version = "=0.12.0"
path = "../../chain/vm"
