[package]
name = "dharitri-sc-scenario"
version = "2.0.0"
edition = "2024"

authors = [
    "Dharitri <contact@dharitri.org>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI tools for writing and executing scenarios"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[features]
default = ["wasm-incompatible"]
wasm-incompatible = ["dharitri-chain-vm/wasm-incompatible"]
compiled-sc-tests = []
run-go-tests = ["compiled-sc-tests"]                              # backwards compatibility
wasmer-experimental = ["dharitri-chain-vm/wasmer-experimental"]
bls = ["dharitri-chain-vm/bls"]
contract-call-legacy = ["dharitri-sc/contract-call-legacy"] 


[dependencies]
base64 = "0.22"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
log = { version = "0.4.17", features = ["std"] }
sha2 = "0.10.6"
serde = "1.0"
serde_json = "1.0"
pathdiff = "0.2.1"
itertools = "0.14.0"
colored = "3.0"
unwrap-infallible = "1.0"
simple-error = "0.3.1"

[dependencies.dharitri-sc]
version = "=2.0.0"
features = ["alloc", "num-bigint", "std"]
path = "../base"

[dependencies.dharitri-sc-meta-lib]
version = "=2.0.0"
path = "../meta-lib"

[dependencies.dharitri-chain-scenario-format]
version = "2.0.0"
path = "../../sdk/scenario-format"

[dependencies.dharitri-vm-executor]
version = "2.0.0"

[dependencies.dharitri-chain-vm]
version = "=2.0.0"
path = "../../chain/vm"
