[package]
name = "dharitri-sdk-http"
version = "2.0.0"
edition = "2024"

authors = [
    "DharitrI <contact@dharitri.org>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "SDK for interacting with the DharitrI blockchain"
categories = ["cryptography::cryptocurrencies", "api-bindings"]
keywords = ["dharitri", "blockchain", "sdk", "api"]

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
static-tls = ["reqwest/rustls-tls"]
chain_simulator = []

[dependencies]
tokio = { version = "1.24", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
anyhow = "1.0.44"
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4.17"
serde_json = "1.0"

[dependencies.dharitri-sdk]
version = "=2.0.0"
path = "../core"
