[package]
name = "dharitri-scenario-format"
version = "0.23.0"
edition = "2021"

authors = [ "Dharitri <contact@dharitri.org>",]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Parser/writer of the Dharitri transaction scenario format"
keywords = ["dharitri", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha3 = "0.10.8"
bech32 = "0.11.0"
