[package]
name = "drtpy-snippet-generator"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2024"
publish = false

[[bin]]
name = "drtpy-snippet-generator"
path = "src/drtpy_snippet_generator.rs"

[dependencies.dharitri-sc]
version = "2.0.0"
path = "../../framework/base"

[dependencies]
bech32 = "0.11"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
