
[package]
name = "op-test-gen"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "op-test-gen"
path = "src/op_gen_main.rs"

[lib]
path = "src/op_gen_lib.rs"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"

[dependencies.dharitri-sc-scenario]
version = "2.0.0"
path = "../../framework/scenario"
