[package]
name = "wat-gen"
version = "0.1.0"
edition = "2024"
publish = false

description = "Generates contracts with a single specific import, for testing protocol flag activations"

[[bin]]
name = "wat-gen"
path = "src/wat_gen_main.rs"

[dependencies]
wat = "1.235"

[dependencies.dharitri-sc-meta-lib]
version = "2.0.0"
path = "../../framework/meta-lib"
