[package]
name = "send-tx-repeat"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2018"
publish = false

[lib]
path = "src/send_tx_repeat.rs"

[dependencies.numbat-wasm]
version = "0.0.18"
path = "../../../numbat-wasm"
features = ["alloc"]

[dev-dependencies.numbat-wasm-debug]
version = "0.0.18"
path = "../../../numbat-wasm-debug"
