[package]
name = "str-repeat"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2024"
publish = false

[lib]
path = "src/str_repeat.rs"

[features]
managed-buffer-builder-cached = ["dharitri-sc/managed-buffer-builder-cached"]

[dependencies.dharitri-sc]
version = "2.0.0"
path = "../../../framework/base"
features = ["alloc"]

[dev-dependencies.dharitri-sc-scenario]
version = "2.0.0"
path = "../../../framework/scenario"
