[package]
name = "dharitri-sc-price-aggregator"
version = "2.0.0"
authors = [
    "Dharitri <contact@dharitri.org>"
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://www.dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "DharitrI Price aggregator Smart Contract"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "2.0.0"
path = "../../../framework/base"

[dependencies.dharitri-sc-modules]
version = "2.0.0"
path = "../../../contracts/modules"

[dev-dependencies.dharitri-sc-scenario]
version = "2.0.0"
path = "../../../framework/scenario"

[dev-dependencies]
rand = { version = "0.9" }
getrandom = { version = "0.3" }
