[package]
name = "numbat-sc-price-aggregator"
version = "0.0.18"
authors = ["Dharitri <contact@dharitri.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://numbat.com/"
documentation = "https://docs.numbat.com/"
description = "Numbat Price aggregator Smart Contract"
keywords = ["numbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.numbat-wasm]
version = "0.0.18"
path = "../../../numbat-wasm"

[dependencies.numbat-wasm-modules]
version = "0.0.18"
path = "../../../numbat-wasm-modules"

[dev-dependencies.numbat-wasm-debug]
version = "0.0.18"
path = "../../../numbat-wasm-debug"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
