[package]
name = "dharitri-sc-wmoa-swap"
version = "0.55.0"

authors = [
    
    "Dharitri <contact@dharitri.org>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/TerraDharitri/drt-rs-sdk"
homepage = "https://dharitri.org/"
documentation = "https://docs.dharitri.org/"
description = "Dharitri Wrapped MOA Smart Contract"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]
edition = "2021"

[lib]
path = "src/wmoa.rs"

[dependencies.dharitri-sc]
version = "0.55.0"
path = "../../../framework/base"

[dependencies.dharitri-sc-modules]
version = "0.55.0"
path = "../../../contracts/modules"

[dev-dependencies.dharitri-sc-scenario]
version = "0.55.0"
path = "../../../framework/scenario"
