[package]
name = "bonding-curve-contract"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2018"
publish = false

[lib]
path = "src/bonding_curve_contract.rs"

[dependencies.numbat-wasm]
version = "0.0.18"
path = "../../../numbat-wasm"

[dependencies.numbat-wasm-modules]
version = "0.0.18"
path = "../../../numbat-wasm-modules"

[dev-dependencies.numbat-wasm-debug]
version = "0.0.18"
path = "../../../numbat-wasm-debug"

