[package]
name = "dcdt-transfer-with-fee"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2018"
publish = false

[lib]
path = "src/dcdt_transfer_with_fee.rs"

[dependencies.numbat-wasm]
version = "0.0.18"
path = "../../../numbat-wasm"

[dev-dependencies.numbat-wasm-debug]
version = "0.0.18"
path = "../../../numbat-wasm-debug"
